--- a/3C/css/main.scss
+++ b/3C/css/main.scss
@@ -1564,6 +1564,7 @@ margin-left: 270px;
   height: 50px;
   margin-left: 10px;
   border-radius: 50%;
+
 }
 
 
@@ -1714,7 +1715,12 @@ opacity: 1;
 }
 
 
-
+.creado{
+  margin-left: 560px;
+  font-size: 15px;
+  margin-top: 40px;
+  color: white;
+}
 
 
 
